--- a/style.css
+++ b/style.css
@@ -4,16 +4,15 @@
   --neon: #59bf61;
   --font: "Scheherazade New";
 }
-
 .bagvid {
   object-fit: cover;
   width: 100%;
   height: 100vh;
   top: 0;
   left: 0;
-  z-index: -10;
   cursor: pointer;
-  /* border: 90px solid var(--neon); */
+  position: relative;
+  z-index: 5;
 }
 
 .flex {
@@ -27,21 +26,39 @@ h1 {
   color: var(--neon);
   font-family: var(--font);
   text-align: center;
-  /* z-index: 9;
-  margin: 30px; */
+  position: absolute;
+  top: 40vh;
+  left: 5vw;
+  z-index: 10;
+  font-size: 10vh;
 }
 
 h2 {
-  z-index: 1;
+  z-index: 10;
   color: var(--neon);
   font-family: var(--font);
-  text-align: center;
-  /* z-index: 9;
-  margin: 30px; */
+  position: absolute;
+  top: 90vh;
+  left: 40%;
+  font-weight: bolder;
+}
+
+h3 {
+  z-index: 0;
+  color: var(--skriftfarve);
+  font-family: var(--font);
+  top: 90vh;
+  left: 40%;
 }
 
 a {
   text-decoration: none;
+}
+
+#projekter,
+#kompetencer,
+#ommig {
+  position: relative;
 }
 
 #projekter:hover,
