--- a/style.css
+++ b/style.css
@@ -13,12 +13,13 @@
   cursor: pointer;
   position: relative;
   z-index: 5;
+  opacity: 0.2;
 }
 
 .flex {
   display: flex;
   flex-direction: row;
-  background-color: var(--baggrundsfarve);
+  background-color: var(--skriftfarve);
 }
 
 h1 {
@@ -41,6 +42,8 @@ h2 {
   top: 90vh;
   left: 40%;
   font-weight: bolder;
+  cursor: pointer;
+  font-size: 5vh;
 }
 
 h3 {
@@ -61,6 +64,7 @@ a {
   position: relative;
 }
 
+.bagvid:hover,
 #projekter:hover,
 #kompetencer:hover,
 #ommig:hover {
@@ -72,9 +76,10 @@ a {
 
 @keyframes kf_up {
   from {
-    transform: translateY(0);
+    transform: scale(1);
   }
   to {
-    transform: translateY(-100vh);
+    transform: scale(1.07);
+    opacity: 1;
   }
 }
