--- a/style.css
+++ b/style.css
@@ -50,13 +50,16 @@ h2 {
   font-size: 5vh;
 }
 
-p {
+p,
+li {
   color: var(--skriftfarve);
   font-family: var(--font);
   font-size: 2.5vh;
+  margin-right: 2vw;
 }
 
-.introduktion h3 {
+.introduktion h3,
+.introduktion2 h3 {
   color: var(--skriftfarve);
   font-family: var(--font);
   font-weight: bolder;
@@ -74,7 +77,17 @@ p {
   margin-bottom: 7vh;
 }
 
-.introduktion p {
+.introduktion2 {
+  margin-top: 7vh;
+  margin-left: 10vw;
+  width: 80%;
+  border: var(--neon) 5px solid;
+  margin-bottom: 7vh;
+  padding-left: 2vw;
+}
+
+.introduktion p,
+.introduktion2 p {
   margin-right: 5vw;
 }
 
@@ -137,7 +150,8 @@ nav {
   padding: 4vw;
 }
 
-.contact {
+.contact,
+.cv {
   margin-bottom: 5vw;
 }
 
@@ -158,4 +172,25 @@ nav {
 .social {
   display: flex;
   flex-direction: row;
+}
+
+.cv {
+  width: 90%;
+  height: auto;
+}
+
+.flexbox {
+  display: flex;
+  flex-direction: row;
+}
+
+.tools p {
+  border: var(--neon) 2px solid;
+  padding: 1vw;
+  margin-top: 2vw;
+  width: 70%;
+}
+
+.tools {
+  margin-bottom: 5vw;
 }
